@@ -1,0 +1,118 @@
+<?php
+/**
+ * Version informations about jsmin extension
+ *
+ * PHP version 5
+ *
+ * @category PHP
+ * @package  PHP_CompatInfo
+ * @author   Remi Collet <Remi@FamilleCollet.com>
+ * @author   Laurent Laville <pear@laurent-laville.org>
+ * @license  http://www.opensource.org/licenses/bsd-license.php  BSD License
+ * @version  GIT: $Id$
+ * @link     http://php5.laurent-laville.org/compatinfo/
+ */
+
+/**
+ * All interfaces, classes, functions, constants about jsmin extension
+ *
+ * @category PHP
+ * @package  PHP_CompatInfo
+ * @author   Remi Collet <Remi@FamilleCollet.com>
+ * @author   Laurent Laville <pear@laurent-laville.org>
+ * @license  http://www.opensource.org/licenses/bsd-license.php  BSD License
+ * @version  Release: @package_version@
+ * @link     http://php5.laurent-laville.org/compatinfo/
+ * @since    Class available since Release 2.25.0
+ */
+class PHP_CompatInfo_Reference_jsmin
+    extends PHP_CompatInfo_Reference_PluginsAbstract
+{
+    /**
+     * Extension/Reference name
+     */
+    const REF_NAME    = 'jsmin';
+
+    /**
+     * Latest version of Extension/Reference supported
+     */
+    const REF_VERSION = '0.1.1';  // 2013-09-14 (beta)
+
+    /**
+     * Gets informations about extensions
+     *
+     * @param string $extension (optional) NULL for PHP version,
+     *                          TRUE if extension version
+     * @param string $version   (optional) php or extension version
+     * @param string $condition (optional) particular relationship with $version
+     *                          Same operator values as used by version_compare
+     *
+     * @return array
+     */
+    public function getExtensions($extension = null, $version = null, $condition = null)
+    {
+        $phpMin = '5.3.10';
+        $extensions = array(
+            self::REF_NAME => array($phpMin, '', self::REF_VERSION)
+        );
+        return $extensions;
+    }
+
+    /**
+     * Gets informations about functions
+     *
+     * @param string $extension (optional) NULL for PHP version,
+     *                          TRUE if extension version
+     * @param string $version   (optional) php or extension version
+     * @param string $condition (optional) particular relationship with $version
+     *                          Same operator values as used by version_compare
+     *
+     * @return array
+     */
+    public function getFunctions($extension = null, $version = null, $condition = null)
+    {
+        $this->setFilter(func_get_args());
+
+        $functions = array();
+
+        $release = '0.1.0';       // 2013-07-26 (beta)
+        $items = array(
+            'jsmin'                                 => array('5.3.10', ''),
+            'jsmin_last_error'                      => array('5.3.10', ''),
+            'jsmin_last_error_msg'                  => array('5.3.10', ''),
+        );
+        $this->applyFilter($release, $items, $functions);
+
+        return $functions;
+    }
+
+    /**
+     * Gets informations about constants
+     *
+     * @param string $extension (optional) NULL for PHP version,
+     *                          TRUE if extension version
+     * @param string $version   (optional) php or extension version
+     * @param string $condition (optional) particular relationship with $version
+     *                          Same operator values as used by version_compare
+     *
+     * @return array
+     */
+    public function getConstants($extension = null, $version = null, $condition = null)
+    {
+        $this->setFilter(func_get_args());
+
+        $constants = array();
+
+        $release = '0.1.0';       // 2013-07-26 (beta)
+        $items = array(
+            'JSMIN_ERROR_NONE'                      => array('5.3.10', ''),
+            'JSMIN_ERROR_UNTERMINATED_COMMENT'      => array('5.3.10', ''),
+            'JSMIN_ERROR_UNTERMINATED_STRING'       => array('5.3.10', ''),
+            'JSMIN_ERROR_UNTERMINATED_REGEX'        => array('5.3.10', ''),
+        );
+        $this->applyFilter($release, $items, $constants);
+
+        return $constants;
+    }
+
+}
