@@ -79,4 +79,5 @@ CAUTION: Its recommended to migrate to PHP5, because the PHP4 version is not mai
 | 2.22.0  | 95    |
 | 2.23.0  | 98    | htscanner, Rar, PDFlib
 | 2.24.0  | 98    |
+| 2.25.0  | 99    | jsmin
 |===========================
