@@ -36,6 +36,7 @@
     L imap                                                    4.0.0
       inclued                               0.1.3             5.1.0
       intl                                  3.0.0             5.2.0
+      jsmin                                 0.1.1             5.3.10
     L json                                  1.2.1             5.2.0
     L ldap                                                    4.0.0
       libevent                              0.1.0             5.3.0
@@ -103,7 +104,7 @@
     L zip                                   1.12.1            4.3.0
     L zlib                                  2.0               4.3.0
     -------------------------------------------------------------------------------
-    A TOTAL OF 98 EXTENSIONS WERE FOUND AND 49 LOADED
+    A TOTAL OF 99 EXTENSIONS WERE FOUND AND 49 LOADED
     -------------------------------------------------------------------------------
     Time: 1 second, Memory: 5.25Mb
     -------------------------------------------------------------------------------
